cmake_minimum_required(VERSION 3.17)
project(motorola4_0)

set(CMAKE_CXX_STANDARD 14)

add_executable(motorola4_0
        .idea/.gitignore
        .idea/.name
        .idea/misc.xml
        .idea/modules.xml
        .idea/motorola4.0.iml
        .idea/workspace.xml
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        cmake-build-debug/motorola4_0.cbp
        cmake-build-debug/motorola4_0.exe
        cmake-build-debug/motorola4_0.ilk
        cmake-build-debug/motorola4_0.pdb
        CMakeLists.txt
        main.cpp)
